samples/_failures_safe/1761317635_322587_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_475bd12e.c:161: error: expected ‘;’, ‘,’ or ‘)’ at end of input
